# sunuxu_cloud

./: .funcignore  .gitignore  README.md  blank.py  function_app.py  host.json  logs.txt  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: dev_sunuxu-test-functions.yml  lint.yml  main_sunuxu-backend.yml  test_moonxutest.yml
api/: __init__.py  admin.py  api_utils.py  authentication.py  blueprint.py  blueprint_2.py  table_data.py  test_1.py  test_2.py
app/: __init__.py
app/database/: __init__.py  azure_blob_storage.py  azure_sql.py
app/models/: user.py
core/: README.md  __init__.py  constants.py  paperwork_wrapper.py  security.py
core/constants/: all_mlses.py
core/database/: README.md  __init__.py  abstract_blob_storage.py  abstract_sql.py  azure_blob_storage.py  azure_postgresql.py  azure_sql.py
core/enums/: __init__.py  brokerage.py  deal_category.py  deal_document_status.py  deal_platform.py  deal_status.py  deal_type.py  message_role.py  message_source_type.py  message_type.py  mls.py  participant_document_status.py  participant_role.py  person_type.py  property_attached_type.py  property_type.py  service_connection_status.py  state.py  team_role.py  transaction_platform.py  transaction_status.py  transaction_type.py
core/integrations/: gmail_wrapper.py  instructor.py  mls_wrapper.py  twilio_wrapper.py
core/models/: README.md  __init__.py  accounts.py  deal.py  (+30 more)
docs/: actions.md  apis.md  azure_setup.md  data_model.md  models.md  notes.md  product.md  scrap.json  sources.md  todo.md  ui.md  workflows.md
my_stuff/: mls.txt  temp.py
playground/: mls_grid.py  search.py  stuff.py  testing.py
sunuxu/: __init__.py
tests/: README.md  check_env.py  check_mode.py  conftest.py  sunuxu_test.sqlite3  temp.py  utils.py
(+191 files in other folders)
