[tool.poetry]
name = "sunuxu-cloud"
version = "0.1.0"
description = ""
authors = ["BrianP8701 <brianp8701@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.18.0"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.29"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
