[tool.poetry]
name = "sunuxu-cloud"
version = "0.1.0"
description = ""
authors = ["BrianP8701 <brianp8701@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.18.0"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.29"
python-dotenv = "^1.0.1"
pyodbc = "^5.1.0"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
pypdf = "^4.2.0"
azure-storage-blob = "^12.19.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
requests = "^2.31.0"
pandas = "^2.2.1"
pillow = "^10.3.0"
azure-identity = "^1.16.0"
azure-monitor-query = "^1.3.0"
faker = "^25.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
