[tool.poetry]
name = "moonxu-cloud"
version = "0.1.0"
description = ""
authors = ["BrianP8701 <brianp8701@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.19"
python-dotenv = "^1.0.1"
azure-storage-blob = "^12.20.0"
pyodbc = "^5.1.0"
sqlalchemy = "^2.0.30"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
pydantic = "^2.7.3"
instructor = "^1.3.2"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
faker = "^25.4.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
